variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: value += is not a member of Int
  x+=1
   ^Variables:6: error: not found: value prendreBiscuit
prendreBiscuit()
^